# sfml-pong

./: CMakeLists.txt
src/: main.cpp  main.h  pang.cpp  pang.h
src/entities/: paddle.cpp  paddle.h
src/objects/: visible-object-manager.cpp  visible-object-manager.h  visible-object.cpp  visible-object.h
src/objects/entities/: ball.cpp  ball.h  field.cpp  field.h  paddle.cpp  paddle.h
src/objects/gui/: exit-button.cpp  exit-button.h  play-button.cpp  play-button.h  splashscreen.cpp  splashscreen.h
src/states/: game-state.cpp  game-state.h  menu-state.cpp  menu-state.h  playing-state.cpp  playing-state.h  splashscreen-state.cpp  splashscreen-state.h
